force-app/main/default/objects/User_Calendar__c/User_Calendar__c.object-meta.xml
<CustomObject>
    <description>Created in lieu of utilization metrics enhancement to track the leaves for individuals.</description>
    <label>User Calendar</label>
    <nameField>
        <displayFormat>LM-{YYYY}{MM}-{000}</displayFormat>
        <label>Utilization Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>