force-app/main/default/objects/User_Calendar__c/fields/Leave_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_End_Date__c</fullName>
    <description>Leave End Date for an user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>