force-app/main/default/objects/User_Calendar__c/fields/Leave_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_date__c</fullName>
    <description>Leave start date for an user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>