force-app/main/default/objects/User_Calendar__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for which leave record is being created</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>