force-app/main/default/objects/User_Calendar__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Created to fetch user full name on calendar object</description>
    <formula>User__r.FirstName + &quot;,&quot; + User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>