force-app/main/default/objects/User_Calendar__c/validationRules/Leave_End_date_is_great_Leave_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_End_date_is_great_Leave_start_date</fullName>
    <active>true</active>
    <description>Leave End date must always be greater than Leave Start date</description>
    <errorConditionFormula>Leave_End_Date__c &lt; Leave_Start_date__c</errorConditionFormula>
    <errorDisplayField>Leave_End_Date__c</errorDisplayField>
    <errorMessage>Leave End date should be greater than Leave Start date</errorMessage>
</ValidationRule>