force-app/main/default/objects/User_Calendar__c/listViews/User_Calendar.listView-meta.xml
<ListView>
    <fullName>User_Calendar</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Leave_Start_date__c</columns>
    <columns>Leave_End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>User Calendar</label>
</ListView>